# PS-Lab-02

./: CMakeLists.txt  atleta.cpp  atleta.h  main.cpp  persona.cpp  persona.h  tanque.cpp  tanque.h
